--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>D3 Graph of Obesity Study 1990-2013</title>
 </head>
-<link rel="stylesheet" href="style.css"></link>
+<link rel="stylesheet" href="./style.css"></link>
 <link rel="stylesheet" href="Skeleton-2.0.4/css/normalize.css">
 <link rel="stylesheet" href="Skeleton-2.0.4/css/skeleton.css">
 <body>
@@ -25,11 +25,11 @@
     </div>
 </div>
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="instructo.min.js"></script>
+<script src="./instructo.min.js"></script>
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
-<script src="script.js"></script>
+<script src="./script.js"></script>
 </body>
 </html> 
